--- a/python/notes/problems/problem03-02.ipynb
+++ b/python/notes/problems/problem03-02.ipynb
@@ -21,31 +21,50 @@
      "output_type": "stream",
      "text": [
       "True\n",
-      "False\n"
+      "False\n",
+      "True\n"
      ]
     }
    ],
    "source": [
     "# 예제 입력 및 출력\n",
     "print(all([1, 2, 5, '6']))\n",
-    "print(all([[], 2, 5, '6']))"
+    "print(all([[], 2, 5, '6']))\n",
+    "print(all([]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 아래에 코드를 작성해주세요.\n",
-    "def my_all(arg):\n",
-    "    for i in arg:\n",
+    "def my_all(x):\n",
+    "    for i in x:\n",
     "        return True if i == True else False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def my_all(x):\n",
+    "    # 원소를 하나씩 확인해서\n",
+    "    for eliment in x:\n",
+    "        # False가 있다면 \n",
+    "        if not eliment:\n",
+    "            # return Flase ->함수 종료!!!!\n",
+    "            return False\n",
+    "    # 다끝났으면, False가 없다는 것이니깐 return True\n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -53,14 +72,16 @@
      "output_type": "stream",
      "text": [
       "True\n",
-      "False\n"
+      "False\n",
+      "True\n"
      ]
     }
    ],
    "source": [
     "# 예제 입력 및 출력\n",
     "print(my_all([1, 2, 5, '6']))\n",
-    "print(my_all([[], 2, 5, '6']))"
+    "print(my_all([[], 2, 5, '6']))\n",
+    "print(my_all([]))"
    ]
   },
   {
@@ -72,6 +93,57 @@
     "> any는 인자로 받는 iterable(range, list)의 요소 중 하나라도 참이면 True를 반환하고, 비어있으면 False를 반환합니다.\n",
     ">\n",
     "> 이와 같은 my_any(x)를 작성해보세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 예제 입력 및 출력\n",
+    "print(any([1, 2, 5, '6']))\n",
+    "print(any([[], 2, 5, '6']))\n",
+    "print(any([]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 아래에 코드를 작성해주세요.\n",
+    "def my_any(arg):\n",
+    "    for i in arg:\n",
+    "        return False if i == False else True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def my_any(x):\n",
+    "    # 원소를 하나씩 확인해서\n",
+    "    for eliment in x:\n",
+    "        # False가 있다면 \n",
+    "        if eliment:\n",
+    "            # return Flase ->함수 종료!!!!\n",
+    "            return True\n",
+    "    # 다끝났으면, False가 없다는 것이니깐 return True\n",
+    "    return False"
    ]
   },
   {
@@ -90,44 +162,10 @@
     }
    ],
    "source": [
-    "# 예제 입력 및 출력\n",
-    "print(any([1, 2, 5, '6']))\n",
-    "print(any([[], 2, 5, '6']))\n",
-    "print(any([0]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 아래에 코드를 작성해주세요.\n",
-    "def my_any(arg):\n",
-    "    for i in arg:\n",
-    "        return False if i == False else True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "True\n",
-      "False\n"
-     ]
-    }
-   ],
-   "source": [
     "# my_any 예제 입력 및 출력\n",
     "print(my_any([1, 2, 5, '6']))\n",
     "print(my_any([[], 2, 5, '6']))\n",
-    "print(my_any([0]))"
+    "print(my_any([]))"
    ]
   },
   {
@@ -155,16 +193,31 @@
    "source": [
     "# 여기에 코드를 작성하세요.\n",
     "def positive_sum(*arg):\n",
+    "    # 결과를 담아 놓을 통\n",
     "    total = 0\n",
+    "    # 하나씩 원소를 확인하면서\n",
     "    for i in arg:\n",
+    "        # 만약에 양수면\n",
     "        if i > 0:\n",
+    "            # 결과에 더해라\n",
     "            total += i\n",
+    "    # 결과 반환\n",
     "    return total"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pos_sum(*numbers):\n",
+    "    return sum([number for number in numbers if number > 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -178,8 +231,27 @@
    ],
    "source": [
     "# 해당 코드를 통해 20과 0이 나오는지 확인하세요.\n",
-    "print(positive_sum(1,-4,7,12))\n",
+    "print(positive_sum(1, -4, 7, 12))\n",
     "print(positive_sum(-1, -2, -3, -4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pos_sum(1, -4, 7, 12))\n",
+    "print(pos_sum(-1, -2, -3, -4))"
    ]
   }
  ],
