190723 | Python - day6 | OOP_basic

--- a/python/notes/04.data_structure.ipynb
+++ b/python/notes/04.data_structure.ipynb
@@ -982,7 +982,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `remove(x)`\n",
+    "### `.remove(x)`\n",
     "\n",
     "리스트에서 값이 x인 것을 삭제합니다. "
    ]
