--- a/python/notes/02.control_of_flow.ipynb
+++ b/python/notes/02.control_of_flow.ipynb
@@ -1337,7 +1337,7 @@
     "width": "307.2px"
    },
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
