--- a/algorithm/190821 Stack.md
+++ b/algorithm/190821 Stack.md
@@ -1,14 +1,14 @@
 # Stack
 
-## 1. 스택의 특성
+## 1. Stack의 특성
 
 * 물건을 쌓아 올리듯 자료를 쌓아 올린 형태의 자료구조이다
-* 스택에 저장된 자료는 선형 구조를 갖는다.
+* stack에 저장된 자료는 선형 구조를 갖는다.
   * 선형구조 : 자료 간의 관계가 1대 1관계
   * 비선형 구조 : 자료 간의 관계가 1대 N의 관계
 * 마지막에 삽입한 자료를 가장 먼저 꺼낸다.(`LIFO`(후입선출, Last-In-First-Out))
 
-## 2. 스택의 구현
+## 2. Stack의 구현
 
 1. 자료구조
 
