190925 | Algorithm - divide and conquer

--- a/algorithm/190826 Stack02.md
+++ b/algorithm/190826 Stack02.md
@@ -117,7 +117,7 @@ subset(0, N, 0)                # 0: 선택한수, N : 전체원소수, 0: 선택
 
 
 
-## 2. 분할정복
+## 3. 분할정복
 
 > 해결할 문제를 여러개의 작은 부분으로 나눈후 문제들을 각각 해결하여 해결된 답을 모으는 방법
 
@@ -178,7 +178,7 @@ print(getMin(0, min(arr)-1))
 2. 분할정렬
 
    ```python
-   def quicSort(a,begin,end):
+   def quickSort(a,begin,end):
        if begin < end:
            p = partition(a,begin,end)
            quickSort(a,begin,p-1)
@@ -186,4 +186,26 @@ print(getMin(0, min(arr)-1))
    ```
 
    
+   
+3. 합치기(피봇위치 가장 왼쪽에 위치)
+
+   ```python
+   def quickSort(lo, hi)
+   	if lo >= hi: return
+       i, j = lo, hi # arr[lo] : 피봇
+       while i < j:
+           while i <= hi and arr[lo] >= arr[i]: i += 1
+           while arr[lo] < arr[j]:j -= 1
+           if i < j:
+               arr[i], arr[j] = arr[j], arr[i]
+       arr[lo], arr[j] = arr[j], arr[li]
+   	quickSort(lo, j-1)
+       quickSort(j+1, hi)
+       
+   quickSort(0, len(arr)-1)
+   ```
+
+### Lomuto partion
+
+
 
