--- a/algorithm/190828 Queue.md
+++ b/algorithm/190828 Queue.md
@@ -51,7 +51,7 @@ while Q:
     print(heappop(Q))
 ```
 
-## 4. 버터(Buffer)
+## 4. 버퍼(Buffer)
 
 1. 버퍼란?
    * 데이터를 한 곳에서 다른 한 곳으로 전송하는 동안 일시적으로 데이터를 보관하는 메모리의 영역
